--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "@testing-library/react": "^9.4.0",
         "@testing-library/user-event": "^7.2.1",
         "axios": "^0.19.0",
+        "bootstrap": "^4.4.1",
         "jquery": "^3.4.1",
+        "popper.js": "^1.16.1",
         "react": "^16.12.0",
         "react-bootstrap": "^1.0.0-beta.16",
         "react-dom": "^16.12.0",
@@ -35,5 +37,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "css-loader": "^3.4.2",
+        "style-loader": "^1.1.3"
     }
 }
